# local-rag-app-example

./: .gitignore  README.md  check_embedding.py  main.py  pyproject.toml  rag_app.py
data/: 20251027.md  20251028.md  20251029.md  20251030.md  20251031.md
data/logs/: 20251027.md  20251028.md  20251029.md  20251030.md  20251031.md
