[project]
name = "local-rag-app-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.10.68",
    "llama-index-embeddings-ollama>=0.2.0",
    "llama-index-llms-ollama>=0.2.2",
    "openai>=2.6.1",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.3",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["local-rag-app-example"]
